[package]
name = "stokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hyper"

[profile.release]
lto = true
debug = true

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
slab = "0.4.6"
libc = "0.2"
tokio = { version = "1" } # only IO traits

[dev-dependencies]
hyper = { version = "0.14.20", git = "https://github.com/bartlomieju/hyper.git", branch = "stokio_integration", features = ["http1", "tcp", "server"] }